--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <hi>This is my Summer 2019 Web Site</hi>
+    <h1>This is my Summer 2019 Web Site</h1>
     <p>I created this site as part of my summer project at Iolani School.</p>
 </body>
 
