made backgroud red

--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <html>
 
 <head>
+
     <title>Summer Site 2019</title>
+    <style>
+        body {
+            background: red;
+        }
+    </style>
+
+
 </head>
 
 <body>
