--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <style>
         body {
             background: red;
+            font-family: sans-serif;
+            text-align: center;
+            display: grid;
+            align-content: center;
+            min-height: 100vh;
+
+        }
+
+        h1 {
+            font-size: 50px;
+
+
         }
     </style>
 
