--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
 
         h1 {
             font-size: 50px;
+            text-transform: uppercase;
+            margin: 0;
 
+        }
 
+        p {
+            color: white;
         }
     </style>
 
