--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
     <h1>This is my Summer 2019 Web Site</h1>
-    <p>I created this site as part of my summer project at Iolani School.</p>
+    <p>I created this site as part of my summer project at Iolani School. Right now I am taking Web Design Fun.</p>
 </body>
 
 </html>
