added essential html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<html>
+<!doctype html>
+<<html lang="en">
 
-<head>
+    <head>
+        <meta charset="utf-8" />
+        <title>Summer Site 2019</title>
+        <meta name="description" content="This is my Summer 2019 website." />
+        <meta name="viewport" content="width=device-width, inital-scale=1" />
+    </head>
 
-    <title>Summer Site 2019</title>
+    <body>
+        <h1>This is my Summer 2019 Web Site</h1>
+        <p>I created this site as part of my summer project at Iolani School. Right now I am taking Web Design Fun.</p>
+    </body>
 
-</head>
-
-<body>
-    <h1>This is my Summer 2019 Web Site</h1>
-    <p>I created this site as part of my summer project at Iolani School. Right now I am taking Web Design Fun.</p>
-</body>
-
-</html>
+    </html>
