--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <body>
         <h1>This is my Summer 2019 Web Site</h1>
         <p>I created this site as part of my summer project at Iolani School. Right now I am taking Web Design Fun.</p>
+
+        <ul>
+            <li>Soccer</li>
+            <li>Football</li>
+            <li>Basketball</li>
+        </ul>
     </body>
 
     </html>
