added unordered list of favorite sports

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <h1>This is my Summer 2019 Web Site</h1>
         <p>I created this site as part of my summer project at Iolani School. Right now I am taking Web Design Fun.</p>
-
+        <h2>These are a list of my favorite sports.</h2>
         <ul>
             <li>Soccer</li>
             <li>Football</li>
