fixed a bug on index.html

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!doctype html>
-<<html lang="en">
+<html lang="en">
 
-    <head>
-        <meta charset="utf-8" />
-        <title>Summer Site 2019</title>
-        <meta name="description" content="This is my Summer 2019 website." />
-        <meta name="viewport" content="width=device-width, inital-scale=1" />
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <title>Summer Site 2019</title>
+    <meta name="description" content="This is my Summer 2019 website." />
+    <meta name="viewport" content="width=device-width, inital-scale=1" />
+</head>
 
-    <body>
-        <h1>This is my Summer 2019 Web Site</h1>
-        <p>I created this site as part of my summer project at Iolani School. Right now I am taking Web Design Fun.</p>
-        <h2>These are a list of my favorite sports.</h2>
-        <ul>
-            <li>Soccer</li>
-            <li>Football</li>
-            <li>Basketball</li>
-        </ul>
-    </body>
+<body>
+    <h1>This is my Summer 2019 Web Site</h1>
+    <p>I created this site as part of my summer project at Iolani School. Right now I am taking Web Design Fun.</p>
+    <h2>These are a list of my favorite sports.</h2>
+    <ul>
+        <li>Soccer</li>
+        <li>Football</li>
+        <li>Basketball</li>
+    </ul>
+</body>
 
-    </html>
+</html>
