added css to make background red plus in index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Summer Site 2019</title>
     <meta name="description" content="This is my Summer 2019 website." />
     <meta name="viewport" content="width=device-width, inital-scale=1" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -16,6 +17,7 @@
         <li>Soccer</li>
         <li>Football</li>
         <li>Basketball</li>
+        <li>Winter Sports</li>
     </ul>
 </body>
 
