added structual elements like footer and header

--- a/index.html
+++ b/index.html
@@ -10,15 +10,41 @@
 </head>
 
 <body>
-    <h1>This is my Summer 2019 Web Site</h1>
-    <p>I created this site as part of my summer project at Iolani School. Right now I am taking Web Design Fun.</p>
-    <h2>These are a list of my favorite sports.</h2>
-    <ul>
-        <li>Soccer</li>
-        <li>Football</li>
-        <li>Basketball</li>
-        <li>Winter Sports</li>
-    </ul>
+    <header>
+        <div class="site-id">
+            <h1><a href="index.html">JKL</a></h1>
+        </div>
+        <nav class="site-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <h2>This is my Summer 2019 Web Site</h2>
+            <p>I created this site as part of my summer project at Iolani School. Right now I am taking Web Design
+                Fun.
+            </p>
+        </section>
+        <section class="lists">
+            <div class="category">
+                <h3>Sports</h3>
+                <p>Favorite sports at this present time</p>
+                <ul>
+                    <li>Soccer</li>
+                    <li>Football</li>
+                    <li>Basketball</li>
+                    <li>Winter Sports</li>
+                </ul>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
