added more css and html

--- a/index.html
+++ b/index.html
@@ -39,11 +39,37 @@
                     <li>Basketball</li>
                     <li>Winter Sports</li>
                 </ul>
+            </div>
+            <div class="category">
+                <h3>Sports</h3>
+                <p>Favorite sports at this present time</p>
+                <ul>
+                    <li>Soccer</li>
+                    <li>Football</li>
+                    <li>Basketball</li>
+                    <li>Winter Sports</li>
+                </ul>
+            </div>
+            <div class="category">
+                <h3>Sports</h3>
+                <p>Favorite sports at this present time</p>
+                <ul>
+                    <li>Soccer</li>
+                    <li>Football</li>
+                    <li>Basketball</li>
+                    <li>Winter Sports</li>
+                </ul>
+            </div>
         </section>
     </main>
 
     <footer>
-
+        <nav class="site-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
     </footer>
 </body>
 
