chamged colors and modifided lists

--- a/index.html
+++ b/index.html
@@ -32,32 +32,29 @@
         <section class="lists">
             <div class="category">
                 <h3>Sports</h3>
-                <p>Favorite sports at this present time</p>
+                <p>Favorite sports</p>
                 <ul>
                     <li>Soccer</li>
                     <li>Football</li>
                     <li>Basketball</li>
-                    <li>Winter Sports</li>
                 </ul>
             </div>
             <div class="category">
-                <h3>Sports</h3>
-                <p>Favorite sports at this present time</p>
+                <h3>Foods</h3>
+                <p>Favorite Foods</p>
                 <ul>
-                    <li>Soccer</li>
-                    <li>Football</li>
-                    <li>Basketball</li>
-                    <li>Winter Sports</li>
+                    <li>Steak</li>
+                    <li>Rice</li>
+                    <li>Sashimi</li>
                 </ul>
             </div>
             <div class="category">
-                <h3>Sports</h3>
-                <p>Favorite sports at this present time</p>
+                <h3>Movies</h3>
+                <p>Favorite Movie</p>
                 <ul>
-                    <li>Soccer</li>
-                    <li>Football</li>
-                    <li>Basketball</li>
-                    <li>Winter Sports</li>
+                    <li>Avengers: Endgame</li>
+                    <li>Fate of the Furious</li>
+                    <li>Crazy Rich Asians</li>
                 </ul>
             </div>
         </section>
