added more blogs to my website

--- a/blog.html
+++ b/blog.html
@@ -30,10 +30,32 @@
         <section class="blog-archives">
 
             <article class="blog-entry">
+                <h3>Week 3</h3>
+                <div class="date">June 14, 2019</div>
+                <p>This week we started using photoshop to edit photos to our raster pictures. I also used photoshop to
+                    clean up a photo of a sketch of the words Summer 2019 that I drew on the white board at school. I
+                    then used Adobe XD to create a copy of my live webstie. This copy makes it easier for me to test out
+                    new color schemes and pictures. Adobe XD enables me to be more creative. A link to my XD copy is in
+                    my About page.</p>
+            </article>
+            <article class="blog-entry">
                 <h3>Week 1</h3>
                 <div class="date">June 14, 2019</div>
-                <p>We worked on getting our website live by creating a repo and copying it down from github.</p>
+                <p>On Monday, we delted all the fake CSS and added in the important HTML. This HTML contained the
+                    header, navigation,footer, and hero. I then created two sub-pages titled the About and Blog pages.
+                    The About page contains all the resources that I had used so far. The Blog page were notes from the
+                    past week.</p>
             </article>
+            <article class="blog-entry">
+                <h3>Week 1</h3>
+                <div class="date">June 14, 2019</div>
+                <p>We worked on getting our website live by creating a repo and copying it down from github. I then used
+                    Termianl to clone the repo to my desktop. After that, I used VS Code to edit my readme file to
+                    create my live website.</p>
+            </article>
+
+
+
         </section>
     </main>
 
