added image and fixed bugs and hero

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
                 </ul>
             </div>
         </section>
+        <section class="ui-designs">
+            <h3>My Custom UI Design</h3>
+            <a href="images/blog.png"><img src="images/blog.png" alt="My Blog Picture in Adobe XD" /></a>
+        </section>
     </main>
 
     <footer>
