added week 4 and 5 blog post

--- a/blog.html
+++ b/blog.html
@@ -30,6 +30,21 @@
         <section class="blog-archives">
 
             <article class="blog-entry">
+                <h3>Week 5</h3>
+                <div class="date">June 28, 2019</div>
+                <p>This week we learned about design patterns like image galleries, breadcrumb navs, modals, and
+                    slideshows, etc. We also coded a custom image gallery of UI designs created in XD.</p>
+            </article>
+            <article class="blog-entry">
+                <h3>Week 4</h3>
+                <div class="date">July 5, 2019</div>
+                <p>This week I used Adobe XD to create a working prototype of my website. the working prtotype enabled
+                    me to click buttons. On the prototype you are able to test out new ideas and concepts. I also
+                    learned different web
+                    design terms like IA, UX, and UI. By the end of the week, we started planning for our final project.
+                </p>
+            </article>
+            <article class="blog-entry">
                 <h3>Week 3</h3>
                 <div class="date">June 28, 2019</div>
                 <p>This week we started using photoshop to edit photos to our raster pictures. I also used photoshop to
