added fancy box

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         </section>
         <section class="ui-designs">
             <h3>My Custom UI Design</h3>
-            <a href="images/blog.png"><img src="images/blog.png" alt="My Blog Picture in Adobe XD" /></a>
+            <a data-fancybox="gallery" href="images/blog.png"><img src="images/blog.png"
+                    alt="My Blog Picture in Adobe XD" /></a>
         </section>
     </main>
 
@@ -72,6 +73,11 @@
                 <li><a href="blog.html">Blog</a></li>
             </ul>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+
 </body>
 
 </html>
