added thumbs for ui designs

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
         </section>
         <section class="ui-designs">
             <h3>My Custom UI Design</h3>
-            <a data-fancybox="gallery" href="images/blog.png"><img src="images/blog.png"
+            <a data-fancybox="gallery" href="images/blog.png"><img src="images/blog-th.png"
                     alt="My Blog Picture in Adobe XD" /></a>
+            <a data-fancybox="gallery" href="images/Hobies.png"><img src="images/Hobies-th.jpg"
+                    alt="My Hobbies Picture in Adobe XD" /></a>
         </section>
     </main>
 
