--- a/index.html
+++ b/index.html
@@ -9,76 +9,76 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-    <header>
-        <div class="site-id">
-            <h1><a href="index.html">JKL</a></h1>
+<body class="page-home"></body>
+<header>
+    <div class="site-id">
+        <h1><a href="index.html">JKL</a></h1>
+    </div>
+    <nav class="site-nav">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="blog.html">Blog</a></li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <section class="hero">
+        <h2>This is my Summer 2019 Web Site</h2>
+        <p>I created this site as part of my summer project at Iolani School. Right now I am taking Web Design
+            Fun.
+        </p>
+    </section>
+    <section class="lists">
+        <div class="category">
+            <h3>Sports</h3>
+            <p>Favorite sports</p>
+            <ul>
+                <li>Soccer</li>
+                <li>Football</li>
+                <li>Basketball</li>
+            </ul>
         </div>
-        <nav class="site-nav">
+        <div class="category">
+            <h3>Foods</h3>
+            <p>Favorite Foods</p>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li>Steak</li>
+                <li>Rice</li>
+                <li>Sashimi</li>
             </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="hero">
-            <h2>This is my Summer 2019 Web Site</h2>
-            <p>I created this site as part of my summer project at Iolani School. Right now I am taking Web Design
-                Fun.
-            </p>
-        </section>
-        <section class="lists">
-            <div class="category">
-                <h3>Sports</h3>
-                <p>Favorite sports</p>
-                <ul>
-                    <li>Soccer</li>
-                    <li>Football</li>
-                    <li>Basketball</li>
-                </ul>
-            </div>
-            <div class="category">
-                <h3>Foods</h3>
-                <p>Favorite Foods</p>
-                <ul>
-                    <li>Steak</li>
-                    <li>Rice</li>
-                    <li>Sashimi</li>
-                </ul>
-            </div>
-            <div class="category">
-                <h3>Movies</h3>
-                <p>Favorite Movie</p>
-                <ul>
-                    <li>Avengers: Endgame</li>
-                    <li>Fate of the Furious</li>
-                    <li>Crazy Rich Asians</li>
-                </ul>
-            </div>
-        </section>
-        <section class="ui-designs">
-            <h3>My Custom UI Design</h3>
-            <a data-fancybox="gallery" href="images/blog.png"><img src="images/blog-th.jpg"
-                    alt="My Blog Picture in Adobe XD" /></a>
-            <a data-fancybox="gallery" href="images/Hobies.png"><img src="images/Hobies-th.jpg"
-                    alt="My Hobbies Picture in Adobe XD" /></a>
-        </section>
-    </main>
-
-    <footer>
-        <nav class="site-nav">
+        </div>
+        <div class="category">
+            <h3>Movies</h3>
+            <p>Favorite Movie</p>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li>Avengers: Endgame</li>
+                <li>Fate of the Furious</li>
+                <li>Crazy Rich Asians</li>
             </ul>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        </div>
+    </section>
+    <section class="ui-designs">
+        <h3>My Custom UI Design</h3>
+        <a data-fancybox="gallery" href="images/blog.png"><img src="images/blog-th.jpg"
+                alt="My Blog Picture in Adobe XD" /></a>
+        <a data-fancybox="gallery" href="images/Hobies.png"><img src="images/Hobies-th.jpg"
+                alt="My Hobbies Picture in Adobe XD" /></a>
+    </section>
+</main>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+<footer>
+    <nav class="site-nav">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="blog.html">Blog</a></li>
+        </ul>
+</footer>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
 </body>
 
