--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 </head>
 
 <body class="page-home"></body>
-<header>
+<header class="toggle-nav">
     <div class="site-id">
         <h1><a href="index.html">JKL</a></h1>
     </div>
     <nav class="site-nav">
+        <div class="menu-button navicon">Menu</div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -80,6 +81,8 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
+<!-- MAIN JS -->
+<script src="js/script.js"></script>
 </body>
 
 </html>
