added toggle nav to about and blog pages

--- a/blog.html
+++ b/blog.html
@@ -10,11 +10,12 @@
 </head>
 
 <body class="page-sub page-blog">
-    <header>
+    <header class="toggle-nav">
         <div class="site-id">
             <h1><a href="index.html">JKL</a></h1>
         </div>
         <nav class="site-nav">
+            <div class="menu-button navicon">Menu</div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -82,6 +83,8 @@
                 <li><a href="blog.html">Blog</a></li>
             </ul>
     </footer>
+    <!-- MAIN JS -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
