--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                 alt="My Blog Picture in Adobe XD" /></a>
         <a data-fancybox="gallery" href="images/Hobies.png"><img src="images/Hobies-th.jpg"
                 alt="My Hobbies Picture in Adobe XD" /></a>
+        <a data-fancybox="gallery" href="images/orangeflower.png"><img src="images/orangeflower-th.jpg"
+                alt="My Blog Picture in Adobe XD" /></a>
     </section>
 </main>
 
