added blog post wk. 6

--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,14 @@
             <p>Weekly notes of what I learned about web design this summer.</p>
         </section>
         <section class="blog-archives">
-
+            <article class="blog-entry">
+                <h3>Week 6</h3>
+                <div class="date">June 28, 2019</div>
+                <p>This week we prepared our site for launch by fixing all ramaining bugs and adding last minute items.
+                    Some things I did were adding new photos and adding the toggle nav. We also made custom logos in
+                    Adobe Illustrator. Lastly, we did a end of the summer review class by
+                    visting everyones website.</p>
+            </article>
             <article class="blog-entry">
                 <h3>Week 5</h3>
                 <div class="date">June 28, 2019</div>
