added a new hero image

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         <a data-fancybox="gallery" href="images/Hobies.png"><img src="images/Hobies-th.jpg"
                 alt="My Hobbies Picture in Adobe XD" /></a>
         <a data-fancybox="gallery" href="images/orangeflower.png"><img src="images/orangeflower-th.jpg"
-                alt="My Blog Picture in Adobe XD" /></a>
+                alt="My Orange Flower Picture in Adobe XD" /></a>
+        /></a>
     </section>
 </main>
 
