--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,8 @@
 <body class="page-sub page-blog">
     <header class="toggle-nav">
         <div class="site-id">
-            <h1><a href="index.html">JKL</a></h1>
+            <h1><a href="index.html">JKL
+                </a> </h1>
         </div>
         <nav class="site-nav">
             <div class="menu-button navicon">Menu</div>
