added another UI Design

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                 alt="My Hobbies Picture in Adobe XD" /></a>
         <a data-fancybox="gallery" href="images/orangeflower.png"><img src="images/orangeflower-th.jpg"
                 alt="My Orange Flower Picture in Adobe XD" /></a>
-        /></a>
+        <a data-fancybox="gallery" href="images/sunset.png"><img src="images/sunset-th.png"
+                alt="My Yellow Sunset in Adobe XD" /></a>
+        </a>
     </section>
 </main>
 
