--- a/about.html
+++ b/about.html
@@ -12,7 +12,9 @@
 <body class="page-sub page-about">
     <header class="toggle-nav">
         <div class="site-id">
-            <h1><a href="index.html">JKL</a></h1>
+            <h1><a href="index.html">
+                    <img src="images/logo.png" alt="JKL">
+                </a></h1>
         </div>
         <nav class="site-nav">
             <div class="menu-button navicon">Menu</div>
