added to my list!!!

--- a/index.html
+++ b/index.html
@@ -28,18 +28,20 @@
 <main>
     <section class="hero">
         <h2>This is my Summer 2019 Web Site</h2>
-        <p>I created this site as part of my summer project at Iolani School. Right now I am taking Web Design
-            Fun.
+        <p>I created this site as part of my summer project at Iolani School. Right now I am taking Web Design Fun.
         </p>
     </section>
     <section class="lists">
         <div class="category">
             <h3>Sports</h3>
-            <p>Favorite sports</p>
+            <p>Favorite Dog</p>
             <ul>
-                <li>Soccer</li>
-                <li>Football</li>
-                <li>Basketball</li>
+                <li>BaNJo</li>
+                <li>bAnjO</li>
+                <li>BaNjO</li>
+                <li>BANJO</li>
+                <li>banjo</li>
+                <li>BAnjo Gu</li>
             </ul>
         </div>
         <div class="category">
@@ -47,8 +49,8 @@
             <p>Favorite Foods</p>
             <ul>
                 <li>Steak</li>
-                <li>Rice</li>
-                <li>Sashimi</li>
+                <li>Pizza</li>
+                <li>Tacos</li>
             </ul>
         </div>
         <div class="category">
@@ -57,7 +59,7 @@
             <ul>
                 <li>Avengers: Endgame</li>
                 <li>Fate of the Furious</li>
-                <li>Crazy Rich Asians</li>
+                <li>Spiderman: Far From Home</li>
             </ul>
         </div>
     </section>
