--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 alt="My Orange Flower Picture in Adobe XD" /></a>
         <a data-fancybox="gallery" href="images/sunset.png"><img src="images/sunset-th.png"
                 alt="My Yellow Sunset in Adobe XD" /></a>
+        <a data-fancybox="gallery" href="images/summerdog.psd"><img src="images/sunset-th.png" alt="My Dog " /></a>
         </a>
     </section>
 </main>
