--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 
-<head>a
+<head>
     <meta charset="UTF-8" />
     <title>Summer Site 2019 | About</title>
     <meta name="description" content="This is my Summer 2019 website." />
